Remove inline style from index.html

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     </div>
     <!-- End navbar -->
 
-    <div class="container-fluid callout-container"
-        style="background: url('./assets/images/hero-image.jpg') no-repeat center center fixed;">
+    <div class="container-fluid callout-container">
         <div class="opacity-overlay">&nbsp;</div>
         <!-- callout -->
         <div class="row">
